Add new service and new view

--- a/Web/PetStore.Web/Views/Product/GetAllProducts.cshtml
+++ b/Web/PetStore.Web/Views/Product/GetAllProducts.cshtml
@@ -6,4 +6,5 @@
     <h1>@productDTO.Name</h1>
     <h1>@productDTO.Price</h1>
     <h1>@productDTO.CategoryName</h1>
+    <img src="@productDTO.Image"/>
 }
